--- a/application/language/.json
+++ b/application/language/.json
@@ -519,11 +519,11 @@
     "email_duplication": "Email duplication",
     "adviser": "Adviser",
     "enter_author_name": "Enter author name",
-    "date_published": "Date published",
+    "date_accomplished": "Date accomplished",
     "enter_company_name": "Enter company name",
     "company_short_description": "Company short description",
     "enter_company_short_description": "Enter company short description",
-    "date_published_:": "Date published :",
+    "date_accomplished_:": "Date accomplished :",
     "no_date_available": "No date available",
     "accessed_student": "Accessed student",
     "total_accessed": "Total accessed",
@@ -607,5 +607,15 @@
     "record_id": "Record id",
     "details": "Details",
     "timestamp": "Timestamp",
-    "user_email": "User email"
+    "user_email": "User email",
+    "faculty_reviewed": "Faculty reviewed",
+    "date_registered": "Date registered",
+    "authorize_a_student": "Authorize a student",
+    "authorize_access_form": "Authorize access form",
+    "authorize_student": "Authorize student",
+    "fulltext_file": "Fulltext file",
+    "date": "Date",
+    "total_price": "Total price",
+    "payment_type": "Payment type",
+    "no_records_found": "No records found"
 }
