added today multiple data

--- a/application/language/.json
+++ b/application/language/.json
@@ -653,5 +653,51 @@
     "mark_as_in_progress": "Mark as in progress",
     "from_year": "From year",
     "to_year": "To year",
-    "no_research_found": "No research found"
+    "no_research_found": "No research found",
+    "active_research": "Active research",
+    "under_review_research": "Under review research",
+    "draft_research": "Draft research",
+    "free_research": "Free research",
+    "paid_research": "Paid research",
+    "researchers_this_year": "Researchers this year",
+    "research_overview": "Research overview",
+    "research_file": "Research file",
+    "search_engine_optimazation": "Search engine optimazation",
+    "research_title": "Research title",
+    "enter_research_title": "Enter research title",
+    "check_if_this_research_is_featured_research": "Check if this research is featured research",
+    "check_if_this_is_a_free_research": "Check if this is a free research",
+    "research_price": "Research price",
+    "enter_research_research_price": "Enter research research price",
+    "check_if_this_research_has_discount": "Check if this research has discount",
+    "this_research_has": "This research has",
+    "research_overview_provider": "Research overview provider",
+    "image": "Image",
+    "research_thumbnail": "Research thumbnail",
+    "research_keywords": "Research keywords",
+    "search_engine_optimization": "Search engine optimization",
+    "check_if_this_research_is_top_research": "Check if this research is top research",
+    "add_research": "Add research",
+    "year_range": "Year range",
+    "search": "Search",
+    "year": "Year",
+    "search_for_research": "Search for research",
+    "research_document_type": "Research document type",
+    "research_adding_form": "Research adding form",
+    "research_has_been_added_successfully": "Research has been added successfully",
+    "from": "From",
+    "to": "To",
+    "year_from": "Year from",
+    "year_to": "Year to",
+    "download_pdf": "Download pdf",
+    "no_authors": "No authors",
+    "no_company_name": "No company name",
+    "date_from": "Date from",
+    "date_to": "Date to",
+    "no_students_found": "No students found",
+    "all_roles": "All roles",
+    "get_all_users": "Get all users",
+    "select_role": "Select role",
+    "filter_researches-to_display_research": "Filter researches-to display research",
+    "filter_researches_to_display_research": "Filter researches to display research"
 }
